# Demiurge-blockchain

./: .editorconfig  .gitignore  ALPHA_LAUNCH_READY.md  ASCENSION_SEAL.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMIURGE_STATE_CAPSULE.md  DEPLOYMENT_STATUS.md  EFFICIENCY_REPORT.md  FINAL_ALPHA_STATUS.md  LICENSE  MILESTONE1_COMPLETE.md  OVHCLOUD_DEPLOYMENT_GUIDE.md  PROJECT_UTILITY_OVERVIEW.md  QORID_REMOTE_SYNC_COMPLETE.md  QOR_DESKTOP_READY.md  README.md  REPO_STATE_SEAL.json  SECURITY.md  SERVER_SETUP_NEXT_STEPS.md  TESTING_PHASE3_CHAT.md  TEST_FEATURES.md  TORRNT_VIDEO_FIX_SUMMARY.md  VIDEO_INTEGRATION.md  clear-localStorage-command.txt  clear-localStorage.js  docker-compose.dev.yml  docker-compose.yml  olve build errors across Rust and TypeScript projects  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-all.ps1  start-fracture.ps1  stop-all.ps1  test-chat-graphql.ps1  test-username-leveling.ps1  test-username-transfers.ps1
apps/desktop-qt/: CMakeLists.txt  README.md
apps/desktop-qt/src/: MainWindow.cpp  MainWindow.h  main.cpp
apps/genesis-launcher/: CMakeLists.txt  INSTALLER_ARCHITECTURE.md  INSTALLER_GUIDE.md  README.md
apps/genesis-launcher/bootstrap/src/: Downloader.cpp  Downloader.h  SeedWindow.cpp  SeedWindow.h  main.cpp
apps/genesis-launcher/installer/: BUILD_INSTALLER.md
apps/genesis-launcher/installer/config/: config.xml  controlscript.qs  finishpage.qs  welcomepage.qs
apps/genesis-launcher/scripts/: build-all.ps1  build-installer-complete.ps1  deploy.py  test-installer.ps1
apps/genesis-launcher/src/: main.cpp
apps/genesis-launcher/src/auth/: AuthManager.cpp  AuthManager.h  KeyVault.cpp  KeyVault.h  SessionToken.cpp  SessionToken.h
apps/genesis-launcher/src/core/: LauncherCore.cpp  LauncherCore.h  ProcessManager.cpp  ProcessManager.h  SystemTrayManager.cpp  SystemTrayManager.h
apps/genesis-launcher/src/ipc/: IPCClient.cpp  IPCClient.h  IPCServer.cpp  IPCServer.h  SharedSession.h
apps/genesis-launcher/src/miner/: MinerDaemon.cpp  MinerDaemon.h  main.cpp
apps/genesis-launcher/src/qml/: LauncherWindow.qml  qml.qrc
apps/genesis-launcher/src/resources/: launcher.rc  resources.qrc
apps/genesis-launcher/src/updater/: DeltaPatcher.cpp  DeltaPatcher.h  ManifestParser.cpp  ManifestParser.h  UpdateEngine.cpp  UpdateEngine.h
apps/qor-desktop/: ADD-YOUR-VIDEO.md  BUILD-TROUBLESHOOTING.md  BUILD_SUCCESS.md  CLEAN-REBUILD.bat  CMakeLists.txt  CRASH_FIX.md  CRITICAL-WRONG-BUILD.md  Check-DLLs.bat  Check-Status.bat  Create-Desktop-Shortcut.ps1  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  FIX-DLLS-AFTER-REBUILD.bat  FIX-MISSING-DLLS.bat  Fix-Video-Background.bat  GIT_WORKFLOW_COMPLETE.md  GLASS_ENGINE_COMPLETE.md  GLASS_ENGINE_PHASE1_COMPLETE.md  GLASS_ENGINE_PHASE2_COMPLETE.md  GLASS_ENGINE_PHASE3_COMPLETE.md  GLASS_ENGINE_PHASE4_COMPLETE.md  LAUNCH.bat  LINUX_SETUP_COMPLETE.md  Launch-QOR-DEBUG.bat  Launch-QOR.bat  Launch-QOR.ps1  MERGE-COMPLETE.md  QOR_REMOTE_SYNC_STATUS.md  QOR_STATUS.md  QOR_SYNC_FIX_APPLIED.md  README-LAUNCHER.md  README.md  RESOLUTION-FIX.md  Rebuild-QOR.ps1  Run-With-Errors.bat  SERVER_SETUP_COMPLETE.md  Simple-Rebuild.bat  Status.bat  Test-Minimal.bat  UX_IMPROVEMENTS_COMPLETE.md  (+8 more)
apps/qor-desktop/assets/wallpapers/: Add-Video.bat  PLACE_VIDEO_HERE.txt  QUICK-START.md  (+1 more)
apps/qor-desktop/docs/: COMPONENT_LIBRARY.md  IMPLEMENTATION_SUMMARY.md  LINUX_TESTING_SETUP.md  QOR_TECHNICAL_BLUEPRINT.md  SHADER_LIBRARY.md
apps/qor-desktop/src/: AbyssIDManager.cpp  AbyssIDManager.h  AppLauncher.cpp  AppLauncher.h  AudioReactiveColors.cpp  AudioReactiveColors.h  BrowserView.cpp  BrowserView.h  MainWindow.cpp  MainWindow.h  QorIDManager.cpp  QorIDManager.h  SystemMonitor.cpp  SystemMonitor.h  SystemTray.cpp  SystemTray.h  UpdateManager.cpp  UpdateManager.h  WalletBridge.cpp  WalletBridge.h  main.cpp
apps/torrnt/: CMakeLists.txt  INSTALL_LIBTORRENT.md  README.md  SETUP.md
apps/torrnt/scripts/: install-libtorrent-manual.ps1
apps/torrnt/src/: TorrentManager.cpp  TorrentManager.h  main.cpp
chain/: Cargo.toml  chain-error.txt
chain/configs/: genesis.devnet.toml  genesis.toml  node.devnet.toml  node.toml
chain/src/: config.rs  invariants.rs  main.rs  node.rs  rpc.rs  signature_guard.rs  state_root_sentinel.rs
chain/src/archon/: a0_directive.rs  archon_commands.rs  archon_consensus.rs  archon_daemon.rs  archon_diagnostics.rs  archon_state_vector.rs  logging.rs  mod.rs
chain/src/consensus/: mod.rs
chain/src/core/: mod.rs  transaction.rs
chain/src/godnet_alignment/: alignment_core.rs  anomaly_resonance_detector.rs  mod.rs  purity_field_enforcer.rs
chain/src/godnet_intentions/: divergence_resolver.rs  intention_merger.rs  mod.rs  synthesis_engine.rs
chain/src/governance/: mod.rs
chain/src/improvement_pipeline/: improvement_executor.rs  improvement_journal.rs  improvement_queue.rs  mod.rs
chain/src/meta/: mod.rs
chain/src/runtime/: abyss_registry.rs  activity_log.rs  bank_cgt.rs  cgt_staking.rs  dev_capsules.rs  developer_registry.rs  fabric_manager.rs  mod.rs  nft_dgen.rs  premium.rs  recursion_registry.rs  treasury.rs  urgeid_registry.rs  version.rs  work_claim.rs
cli/: Cargo.toml  README.md
cli/src/: help.rs  main.rs
indexer/ingestor-rs/: Cargo.toml
indexer/ingestor-rs/src/: block_drift_detector.rs  canonical_chain_enforcer.rs  error.rs  main.rs  recovery_mode.rs
sdk/rust-sdk/: Cargo.toml  README.md
sdk/rust-sdk/src/: cgt.rs  client.rs  error.rs  lib.rs  marketplace.rs  nft.rs  signing.rs  types.rs  urgeid.rs
templates/game-engine/: CMakeLists.txt  README.md
templates/game-engine-recursion/: CMakeLists.txt  README.md
templates/game-engine-recursion/src/: BlockchainRPC.cpp  BlockchainRPC.h  EntityManager.cpp  EntityManager.h  GameEntity.cpp  GameEntity.h  GameRenderer.cpp  GameRenderer.h  RecursionEngine.cpp  RecursionEngine.h  main.cpp  recursion_world.cpp  recursion_world.h
templates/game-engine/src/: demo_scene.cpp  demo_scene.h  main.cpp  rpc.cpp  rpc.h  urgeid.cpp  urgeid.h
templates/rust-service/: Cargo.toml  README.md
templates/rust-service/src/: main.rs
(+946 files in other folders)
