[workspace]
members = [
    "chain",
    "indexer/ingestor-rs",
    "sdk/rust-sdk",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Laustrup"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0"
anyhow = "1.0"
sha2 = "0.10"
env_logger = "0.11"

