[package]
name = "demiurge-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
argon2 = "0.5"
rocksdb = "0.22"
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hex = "0.4"
log = "0.4"
toml = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"
