[package]
name = "demiurge-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Laustrup"]
description = "Command-line interface for Demiurge Blockchain"
license = "MIT"

[[bin]]
name = "demiurge"
path = "src/main.rs"

[dependencies]
demiurge-rust-sdk = { path = "../sdk/rust-sdk" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chrono = "0.4"

