[package]
name = "demiurge-rust-service-template"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Laustrup"]
description = "Rust server template for Demiurge Blockchain"

[dependencies]
demiurge-rust-sdk = { path = "../../sdk/rust-sdk" }
axum = "0.8"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"

